--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div id="button"></div>
   <div id="myDiagramDiv" style="width:100%; height:700px; background-color: #34343C;"></div>
   <div>by 创造城</div>
+  <script src="data.js"></script>
   <script src="lib/go.js"></script>
   <script src="js.js"></script>
   <script>
